# flashmd-python

./: .gitignore  LICENSE  README.md  install-desktop.sh  install-linux.sh  install-mac.sh  install-windows.bat  pyproject.toml  requirements.txt
flashmd/: main.py
flashmd/db/: card_repo.py  database.py  deck_repo.py  import_service.py  progress_repo.py
flashmd/gui/: app.py  deck_list.py  deck_stats.py  session_summary.py  study_session.py  theme.py
flashmd/parser/: md_parser.py
flashmd/sm2/: algorithm.py
tests/: conftest.py
tests/unit/: test_md_parser.py  test_repos.py  test_sm2.py
