[project]
name = "flashmd"
version = "0.1.0"
description = "Markdown flashcard app with SM-2 spaced repetition"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
flashmd = "flashmd.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
